add find all clothes test and mock controller